--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="index-container">
     <h1 class="main-title">Tu regalo de cumpleaños</h1>
-    <p class="main-paragraph">Mi amor, este es tu super regalo de cumpleaños. El mejor regalo de la vida</p>
+    <h4 class="main-paragraph">Mi amor, este es tu super regalo de cumpleaños. El mejor regalo de la vida</h4>
     <h2 class="corea">Corea del sur</h2>
     <div class="present-container">
       <div class="mono1"></div>
