--- a/carta.html
+++ b/carta.html
@@ -10,13 +10,13 @@
 
 <body>
   <div class="index-container">
-  <h1 class="corea show-item">Mi amor</h1><br /><br />
-    <p>Eres el amor de mi vida.</p><br/>
+  <h1 class="corea show-item">Mi amor</h1>
+    <p>Eres el amor de mi vida.</p>
     <p>Realmente quiero vivir cada minuto contigo.</p>
     <p>Quiero compartir todo lo que soy y lo que quiero contigo, obviamente.</p>
-    <p>Y tambien quiero compartir tus sueños e ilusiones.</p><br/><br/>
+    <p>Y tambien quiero compartir tus sueños e ilusiones.</p><br/>
     <p>Desde que te conoci se que te encanta Corea y su cultura. Quiero que conozcamos esa gran cultura juntos. Quiero ver tu reaccion y compartirla.</p>
-    <p>Ojala descubramos el mundo juntos!!</p><br/><br/>
+    <p>Ojala descubramos el mundo juntos!!</p>
     <p>Tenemos mucho por delante, mucho por hacer y por conocer.</p>
     <p>Tenemos toda la vida juntos!!</p>
     <p>Todo lo que hago es por nuestro futuro y porque espero que seas feliz.</p>
