--- a/carta.html
+++ b/carta.html
@@ -14,7 +14,7 @@
     <p>Eres el amor de mi vida.</p>
     <p>Realmente quiero vivir cada minuto contigo.</p>
     <p>Quiero compartir todo lo que soy y lo que quiero contigo, obviamente.</p>
-    <p>Y tambien quiero compartir tus sueños e ilusiones.</p><br/>
+    <p>Y tambien quiero compartir tus sueños e ilusiones.</p>
     <p>Desde que te conoci se que te encanta Corea y su cultura. Quiero que conozcamos esa gran cultura juntos. Quiero ver tu reaccion y compartirla.</p>
     <p>Ojala descubramos el mundo juntos!!</p>
     <p>Tenemos mucho por delante, mucho por hacer y por conocer.</p>
